[gd_scene load_steps=2 format=3 uid="uid://bh8xvn8ywqxqxq"]

[ext_resource type="Script" path="res://scripts/ui/SkillTreeUI.gd" id="1_0x8yw"]

[node name="SkillTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8yw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skill Tree"
theme_type_variation = &"HeaderLarge"

[node name="SkillPointsLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
text = "Skill Points: 0"
theme_type_variation = &"HeaderMedium"

[node name="ContentContainer" type="HSplitContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillTreePanel" type="Panel" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ContentContainer/SkillTreePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="SkillTreeContainer" type="GridContainer" parent="MainContainer/ContentContainer/SkillTreePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="InfoPanel" type="Panel" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DescriptionLabel" type="Label" parent="MainContainer/ContentContainer/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Skill Description"
theme_type_variation = &"HeaderMedium"

[node name="SkillDescription" type="RichTextLabel" parent="MainContainer/ContentContainer/InfoPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Hover over a skill to see its description and effects."

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/ContentContainer/InfoPanel/InfoContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="MainContainer/ContentContainer/InfoPanel/InfoContainer/ButtonContainer"]
layout_mode = 2
text = "Reset Skills"

[node name="CloseButton" type="Button" parent="MainContainer/ContentContainer/InfoPanel/InfoContainer/ButtonContainer"]
layout_mode = 2
text = "Close"